GameService :: It has been added the badge calculation by its score and it has been done all the basic unit test